deploy: c2e23dc8937bc12ad5d68f8cb8b90254d6c8bf03

--- a/nodesnim/nodescontrol/label.html
+++ b/nodesnim/nodescontrol/label.html
@@ -132,6 +132,8 @@ function main() {
   <ul class="simple simple-toc-section">
       <li><a class="reference" href="#draw.e%2CLabelRef%2CGLfloat%2CGLfloat"
     title="draw(self: LabelRef; w, h: GLfloat)"><wbr />draw<span class="attachedType">LabelRef</span></a></li>
+  <li><a class="reference" href="#getTextSize.e%2CLabelRef"
+    title="getTextSize(self: LabelRef): Vector2Ref"><wbr />get<wbr />Text<wbr />Size<span class="attachedType">LabelRef</span></a></li>
   <li><a class="reference" href="#duplicate.e%2CLabelRef"
     title="duplicate(self: LabelRef): LabelRef"><wbr />duplicate<span class="attachedType">LabelRef</span></a></li>
   <li><a class="reference" href="#setTextAlign.e%2CLabelRef%2CAnchorRef"
@@ -211,6 +213,13 @@ function main() {
 This uses in the <tt class="docutils literal"><span class="pre">window.nim</span></tt>.
 
 </dd>
+<a id="getTextSize.e,LabelRef"></a>
+<dt><pre><span class="Keyword">method</span> <a href="#getTextSize.e%2CLabelRef"><span class="Identifier">getTextSize</span></a><span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <a href="label.html#LabelRef"><span class="Identifier">LabelRef</span></a><span class="Other">)</span><span class="Other">:</span> <a href="../core/vector2.html#Vector2Ref"><span class="Identifier">Vector2Ref</span></a> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">base</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
+<dd>
+
+Returns text size.
+
+</dd>
 <a id="duplicate.e,LabelRef"></a>
 <dt><pre><span class="Keyword">method</span> <a href="#duplicate.e%2CLabelRef"><span class="Identifier">duplicate</span></a><span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <a href="label.html#LabelRef"><span class="Identifier">LabelRef</span></a><span class="Other">)</span><span class="Other">:</span> <a href="label.html#LabelRef"><span class="Identifier">LabelRef</span></a> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">base</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
 <dd>
@@ -249,7 +258,7 @@ Changes Label text.
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2020-06-08 07:53:43 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2020-06-08 12:04:47 UTC</small>
       </div>
     </div>
   </div>
