deploy: 492b15dc4fc602bc7736634b10561492c4dbfc36

--- a/nodesnim/nodescontrol/subwindow.html
+++ b/nodesnim/nodescontrol/subwindow.html
@@ -131,7 +131,9 @@ function main() {
 <li>
   <a class="reference reference-toplevel" href="#14" id="64">Methods</a>
   <ul class="simple simple-toc-section">
-      <li><a class="reference" href="#close.e%2CSubWindowRef"
+      <li><a class="reference" href="#bringToFront.e%2CSubWindowRef"
+    title="bringToFront(self: SubWindowRef)"><wbr />bring<wbr />To<wbr />Front<span class="attachedType">SubWindowRef</span></a></li>
+  <li><a class="reference" href="#close.e%2CSubWindowRef"
     title="close(self: SubWindowRef)"><wbr />close<span class="attachedType">SubWindowRef</span></a></li>
   <li><a class="reference" href="#draw.e%2CSubWindowRef%2CGLfloat%2CGLfloat"
     title="draw(self: SubWindowRef; w, h: GLfloat)"><wbr />draw<span class="attachedType">SubWindowRef</span></a></li>
@@ -217,6 +219,13 @@ function main() {
 <div class="section" id="14">
 <h1><a class="toc-backref" href="#14">Methods</a></h1>
 <dl class="item">
+<a id="bringToFront.e,SubWindowRef"></a>
+<dt><pre><span class="Keyword">method</span> <a href="#bringToFront.e%2CSubWindowRef"><span class="Identifier">bringToFront</span></a><span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <a href="subwindow.html#SubWindowRef"><span class="Identifier">SubWindowRef</span></a><span class="Other">)</span> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">base</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
+<dd>
+
+
+
+</dd>
 <a id="close.e,SubWindowRef"></a>
 <dt><pre><span class="Keyword">method</span> <a href="#close.e%2CSubWindowRef"><span class="Identifier">close</span></a><span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <a href="subwindow.html#SubWindowRef"><span class="Identifier">SubWindowRef</span></a><span class="Other">)</span> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">base</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">Exception</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">RootEffect</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
 <dd>
@@ -332,7 +341,7 @@ Opens the window. alias of show() method.
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2020-06-19 15:14:10 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2021-08-30 07:04:14 UTC</small>
       </div>
     </div>
   </div>
