--- a/nodesnim/nodes/scene.html
+++ b/nodesnim/nodes/scene.html
@@ -107,7 +107,8 @@ function main() {
   <a class="reference reference-toplevel" href="#7" id="57">Types</a>
   <ul class="simple simple-toc-section">
       <li><a class="reference" href="#SceneObj"
-    title="SceneObj {.final.} = object of NodeObj"><wbr />Scene<wbr />Obj<span class="attachedType"></span></a></li>
+    title="SceneObj {.final.} = object of NodeObj
+  data*: seq[tuple[k: string, v: string]]"><wbr />Scene<wbr />Obj<span class="attachedType"></span></a></li>
   <li><a class="reference" href="#SceneRef"
     title="SceneRef = ref SceneObj"><wbr />Scene<wbr />Ref<span class="attachedType"></span></a></li>
 
@@ -156,7 +157,9 @@ function main() {
 <h1><a class="toc-backref" href="#7">Types</a></h1>
 <dl class="item">
 <a id="SceneObj"></a>
-<dt><pre><a href="scene.html#SceneObj"><span class="Identifier">SceneObj</span></a> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">final</span></span><span class="Other">.}</span></span> <span class="Other">=</span> <span class="Keyword">object</span> <span class="Keyword">of</span> <a href="node.html#NodeObj"><span class="Identifier">NodeObj</span></a></pre></dt>
+<dt><pre><a href="scene.html#SceneObj"><span class="Identifier">SceneObj</span></a> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">final</span></span><span class="Other">.}</span></span> <span class="Other">=</span> <span class="Keyword">object</span> <span class="Keyword">of</span> <a href="node.html#NodeObj"><span class="Identifier">NodeObj</span></a>
+  <span class="Identifier">data</span><span class="Operator">*</span><span class="Other">:</span> <span class="Identifier">seq</span><span class="Other">[</span><span class="Keyword">tuple</span><span class="Other">[</span><span class="Identifier">k</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">,</span> <span class="Identifier">v</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">]</span><span class="Other">]</span>
+</pre></dt>
 <dd>
 
 
@@ -245,7 +248,7 @@ Recalculates node positions.
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2020-06-19 15:13:21 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2021-08-30 07:03:17 UTC</small>
       </div>
     </div>
   </div>
